--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.1.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
@@ -18,6 +20,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "eslint": "^8",
