--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.1.0",
+    "@aws-sdk/client-s3": "^3.583.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "mongodb": "^6.6.2",
@@ -17,7 +18,9 @@
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
