Synced up stripe to checkout page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
   "tailwindCSS.includeLanguages": {
     "javascript": "javascript",
     "html": "HTML"
-  }
+  },
+  "editor.formatOnSaveMode": "modifications"
 }
