--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-s3": "^3.583.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "micro": "^10.0.1",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "next": "14.2.3",
